# facets-module-mcp

./: .gitignore  GUIDE.md  README.md  config.py  facets_server.py  provider_block_validator.py  pyproject.toml  requirements.txt  setup.py  test_provider_block_validation_standalone.py  test_provider_block_validator.py
examples/: streamable-http-usage.md
examples/Kong-api-gateway/: README.md
examples/ci_workflow/github_action/1.0/: README.md
examples/storage/s3/1.0/: README.md  facets.yaml  main.tf  variables.tf
facets_mcp/: CLAUDE.md  __init__.py  __main__.py  _version.py  config.py  facets_server.py
facets_mcp/prompts/: facets_actions.md  facets_actions_prompt.py
facets_mcp/tests/: test_provider_block_validation.py
facets_mcp/tools/: deploy_module.py  existing_modules.py  facets_actions.py  fork_module.py  ftf_tools.py  import_tools.py  instructions.py  intent_management_tools.py  local_module_discovery.py  module_files.py  module_validate_and_register.py  module_write.py  output_type_management.py
facets_mcp/tools/module_instructions/: facets_actions.md  facets_yaml_spec_x-ui_tags.md  generation_workflow.md  how_to_configure_provider.md  iac_block.md  imports.md  input_outputs.md  intent_management.md  mcp-supplementary-instructions.md  tf.md  variables.md
facets_mcp/tools/modules/cloud_account/aws/1.0/: facets.yaml  outputs.tf
facets_mcp/tools/modules/cloud_compute/aws_ec2/1.0/: README.md  facets.yaml  main.tf  outputs.tf  variables.tf
facets_mcp/tools/modules/network/aws_vpc/1.0/: README.md  facets.yaml  main.tf  outputs.tf  variables.tf
facets_mcp/utils/: client_utils.py  file_utils.py  ftf_command_utils.py  intent_utils.py  module_download_utils.py  output_utils.py  test_file_utils.py  test_yaml_utils.py  validation_utils.py  yaml_utils.py
prompts/: generate_module.md  module_prompt.py
storage/aws-s3-bucket/1.0/: README.md  facets.yaml  main.tf  outputs.tf  variables.tf
tools/: __init__.py  deploy_module.py  existing_modules.py  ftf_tools.py  instructions.md  instructions.py  module_files.py
tools/module_instructions/: facets_yaml_spec_x-ui_tags.md  how_to_configure_provider.md  input_outputs.md  tf.md  variables.md
utils/: __init__.py  client_utils.py  output_utils.py  yaml_utils.py
