[project]
name = "facets-mcp-server"
version = "0.1.0"
description = "MCP server for Facets"
authors = [
    { name = "Anshul Sao", email = "anshul@example.com" }
]
dependencies = [
    "mcp[cli]",
    "checkov",
    "questionary",
    "ftf-cli @ git+https://github.com/Facets-cloud/module-development-cli.git@1e754f8493d71f8b3bcb1bf0d95c6c7b78d75868",
    "swagger_client @ git+https://github.com/Facets-cloud/control-plane-python-sdk.git@8bcd4eefcc2c0916cd17c6cd2cd7f7e11ef8530f"
]
requires-python = ">=3.10"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.uv]
# (optional section for uv settings — no problem keeping this here)
