[project]
name = "facets-mcp-server"
version = "0.1.0"
description = "MCP server for Facets"
authors = [
    { name = "Anshul Sao", email = "anshul@example.com" }
]
dependencies = [
    "mcp[cli]",
    "checkov",
    "questionary",
    "ftf-cli @ git+https://github.com/Facets-cloud/module-development-cli.git@784e89b716ecdf83fd590c9b1f2d1a4df64c8c2f",
    "swagger_client @ git+https://github.com/Facets-cloud/control-plane-python-sdk.git@8bcd4eefcc2c0916cd17c6cd2cd7f7e11ef8530f"
]
requires-python = ">=3.10"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.uv]
# (optional section for uv settings — no problem keeping this here)
